--- a/src/app/home/includes/header/header.component.html
+++ b/src/app/home/includes/header/header.component.html
@@ -76,8 +76,12 @@
                 <a routerLink="/inventory" class="nav-link"><i class="fa fa-caret-right"></i> Inventory </a>
               </li>
               <li class="nav-item">
-                <a routerLink="/stock-balances" class="nav-link"><i class="fa fa-caret-right"></i> Stock Balance Report </a>
+                <a routerLink="/master-report/inventory" class="nav-link"><i class="fa fa-caret-right"></i>
+                  Report </a>
               </li>
+              <!-- <li class="nav-item">
+                <a routerLink="/stock-balances" class="nav-link"><i class="fa fa-caret-right"></i> Stock Balance Report </a>
+              </li> -->
             </ul>
           </li>
         </div>
@@ -97,10 +101,7 @@
               <!-- <li class="nav-item">
                 <a routerLink="/master-report/expiry" class="nav-link"><i class="fa fa-caret-right"></i> Expiry Report </a>
               </li> -->
-              <li class="nav-item">
-                <a routerLink="/master-report/inventory" class="nav-link"><i class="fa fa-caret-right"></i> Inventory
-                  Report </a>
-              </li>
+              
               <li class="nav-item">
                 <a routerLink="/master-report/sale" class="nav-link"><i class="fa fa-caret-right"></i> Sale Report </a>
               </li>
