--- a/src/app/home/inventory/inventory.component.html
+++ b/src/app/home/inventory/inventory.component.html
@@ -54,8 +54,8 @@
           <table class="mb-0 table table-bordered pull-right summary" style="font-size: 14px; width: 40%; margin-bottom: 20px !important;">
               <thead>
                   <tr>
-                      <th style="width: 25%;">Total TP</th>
-                      <th style="width: 25%;">Total MRP</th>
+                      <th style="width: 25%;">Total CPU</th>
+                      <th style="width: 25%;">Total RPU</th>
                       <th style="width: 25%;">Total Profit</th>
                   </tr>
               </thead>
