--- a/src/app/home/master-report/master-inventory-report/master-inventory-report.component.html
+++ b/src/app/home/master-report/master-inventory-report/master-inventory-report.component.html
@@ -14,30 +14,27 @@
       <div class="row">
         <div class="col-lg-12 sale-filter-form-background">
             <form id="myForm" class="form-inline form-width-100" (ngSubmit)="filterList()">
-              <!-- <div class="position-relative form-group">
-                <label for="company" class="label-margin-right"> Company </label>
-                <input name="company" [(ngModel)]="filterItem.company" [ngbTypeahead]="company_search" placeholder="Type Company" type="text" class="form-control">
-              </div> -->
               <div class="position-relative form-group search-div">
-                <!--<label for="medicine" class="label-margin-right"> Medicine </label>-->
+                <input name="company" [(ngModel)]="filterItem.company" [ngbTypeahead]="company_search" placeholder="Supplier" type="text" class="form-control">
+              </div>
+              <!-- <div class="position-relative form-group search-div">
                 <div id="scrollable-dropdown-menu">
                   <input id="typeahead-basic" name="search" [(ngModel)]="filterItem.medicine" placeholder="Product Name" type="text" [ngbTypeahead]="search" class="form-control">
                 </div>
-              </div>
+              </div> -->
               <div class="position-relative form-group search-div">
-                <!--<label for="type" class="label-margin-right"> Type </label>-->
-                <input id="type" name="search_type" [(ngModel)]="filterItem.type" placeholder="Type" type="text" [ngbTypeahead]="search_type" class="form-control">
+                <input
+                  autocomplete="off"
+                  type="text"
+                  placeholder="Date Range"
+                  class="form-control"
+                  bsDaterangepicker
+                  [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }"
+                  [(ngModel)]="filterItem.date_range"
+                  name="date_range"
+                />
               </div>
-              <div class="position-relative form-group search-div">
-                <!--<label for="quantity" class="label-margin-right"> Quantity </label>-->
-                <input name="quantity" [(ngModel)]="filterItem.quantity" id="quantity" placeholder="Type Quantity" type="number" class="form-control">
-              </div>
-              <div class="position-relative form-check">
-                <label class="form-check-label low-stock">
-                  <input type="checkbox" name="low_stock_qty" [(ngModel)]="filterItem.low_stock_qty" class="form-check-input"> <span style="color: white;">Low Stock QTY &nbsp;</span> 
-                </label>
-              </div>
-              <button type="button" (click)="filterList()" id="filter-medicine-btn" class="btn btn-info"> 
+              <button type="button" (click)="filterList()" id="filter-medicine-btn" class="btn btn-info search-div"> 
                 Filter
               </button> &nbsp;
               <button type="button" (click)="resetList()" class="btn btn-warning">
@@ -50,8 +47,8 @@
               <thead>
                   <tr>
                       <th style="width: 20%;">Total Qty</th>
-                      <th style="width: 20%;">Total TP</th>
-                      <th style="width: 20%;">Total MRP</th>
+                      <th style="width: 20%;">Total CPU</th>
+                      <th style="width: 20%;">Total RPU</th>
                       <th style="width: 20%;">Total Profit</th>
                   </tr>
               </thead>
@@ -73,9 +70,10 @@
                       <th>#</th>
                       <th style="width: 50%;">Product Details</th>
                       <th>Stock Qty</th>
+                      <th>Qty In</th>
+                      <th>Qty Out</th>
                       <th>CPU</th>
                       <th>RPU</th>
-                      <th>Low Stock Alert Qty</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -89,9 +87,16 @@
                         <p *ngIf="item.quantity<'0'">0</p>
                         <p *ngIf="item.quantity>='0'">{{ item.quantity }}</p>
                       </td>
+                      <td>
+                        <p *ngIf="item.quantity_in<'0'">0</p>
+                        <p *ngIf="item.quantity_in>='0'">{{ item.quantity_in }}</p>
+                      </td>
+                      <td>
+                        <p *ngIf="item.quantity_out<'0'">0</p>
+                        <p *ngIf="item.quantity_out>='0'">{{ item.quantity_out }}</p>
+                      </td>
                       <td>{{ item.tp }}</td>
                       <td>{{ item.mrp }}</td>
-                      <td>{{ item.low_stock_qty }}</td>
                   </tr>
               </tbody>
           </table>
