--- a/src/app/home/master-report/master-purchase-report/master-purchase-report.component.html
+++ b/src/app/home/master-report/master-purchase-report/master-purchase-report.component.html
@@ -49,7 +49,7 @@
             <thead>
               <tr>
                 <th style="width: 15%;">Total Invoice</th>
-                <th style="width: 15%;">Medicine Qty</th>
+                <th style="width: 15%;">Quantity</th>
                 <th style="width: 30%;">Total Amount</th>
                 <th style="width: 20%;">Total Discount</th>
                 <th style="width: 20%;">Total Due</th>
