--- a/src/app/home/sale/sale.component.html
+++ b/src/app/home/sale/sale.component.html
@@ -424,8 +424,10 @@
             <tr>
               <th style="width:10%" class="unit">Sl.</th>
               <th style="width:30%;text-align: left">Product</th>
-              <th style="width:20%">Quantity(Pcs)</th>
-              <th style="width:20%;text-align: right">Unit Price(&#x9f3;)</th>
+              <th style="width:10%">Quantity(Pcs)</th>
+              <th style="width:10%;text-align: right">CPU(&#x9f3;)</th>
+              <th style="width:10%;text-align: right">Unit Price(&#x9f3;)</th>
+              <th style="width:10%;text-align: right">Profit(&#x9f3;)</th>
               <th style="width:20%;text-align: right;padding-right: 2%">
                 Amount(&#x9f3;)
               </th>
@@ -447,7 +449,9 @@
                   {{ item.medicine_type }})
                 </td>
                 <td class="qty">{{ item.quantity }}</td>
+                <td style="text-align: right">{{ item.tp }}</td>
                 <td style="text-align: right">{{ item.unit_price }}</td>
+                <td style="text-align: right">{{ item.profit }}</td>
                 <td style="text-align: right;padding-right: 2%">
                   {{ item.sub_total }}
                 </td>
@@ -457,6 +461,8 @@
           <tfoot style="border-top: solid darkgray 1px">
             <tr>
               <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>{{ orderDetails.total_qty }}</td>
               <td>&nbsp;</td>
               <td colspan="2" style="text-align: left;font-weight: bold;">
                 Total Amount
@@ -468,6 +474,8 @@
             <tr>
               <td>&nbsp;</td>
               <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
               <td colspan="2" style="text-align: left;font-weight: bold">
                 Discount Amount
               </td>
@@ -476,6 +484,8 @@
               </td>
             </tr>
             <tr>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td colspan="2" style="text-align: left;font-weight: bold">
@@ -490,6 +500,8 @@
             <tr>
               <td>&nbsp;</td>
               <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
               <td colspan="2" style="text-align: left;font-weight: bold">
                 Net Profit
               </td>
@@ -500,6 +512,8 @@
               </td>
             </tr>
             <tr>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: left;font-weight: bold">
@@ -513,7 +527,7 @@
           <ng-template #emptyItem>
             <tbody>
               <tr>
-                <td colspan="5">
+                <td colspan="7">
                   <h5 class="text-center">No Item Found</h5>
                 </td>
               </tr>
