--- a/src/app/home/supplier/supplier.component.html
+++ b/src/app/home/supplier/supplier.component.html
@@ -108,10 +108,12 @@
   <div class="row" style="padding: 25px">
     <div class="col-md-12" style="border: #8080804a solid 1px; width: 100%">
       <main style="margin-bottom: 5%">
-        <form [formGroup]="registerForm" (ngSubmit)="submit()" style="padding-top: 10px">
+        <form [formGroup]="registerForm" (keydown.enter)="$event.preventDefault()" style="padding-top: 10px">
           <div class="form-group">
             <label>Name</label>
             <input type="text" formControlName="name" class="form-control"
+              #nameInput
+              (keydown.enter)="contactPersonInput.focus()"
               [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
             <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
               <div *ngIf="f.name.errors.required">Supplier name is required</div>
@@ -120,37 +122,33 @@
           <div class="form-group">
             <label>Contact Person</label>
             <input type="text" formControlName="contact_person" class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.contact_person.errors }" />
-            <div *ngIf="submitted && f.contact_person.errors" class="invalid-feedback">
-              <div *ngIf="f.contact_person.errors.required">Contact Person is required</div>
-            </div>
+              #contactPersonInput
+              (keydown.enter)="emailInput.focus()"
+            />
           </div>
           <div class="form-group">
             <label>Email</label>
             <input type="text" formControlName="email" class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-              <div *ngIf="f.email.errors.required">User Email is required</div>
-            </div>
+              #emailInput
+              (keydown.enter)="mobileInput.focus()"
+            />
           </div>
           <div class="form-group">
             <label>Mobile</label>
             <input type="text" formControlName="mobile" class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.mobile.errors }" />
-            <div *ngIf="submitted && f.mobile.errors" class="invalid-feedback">
-              <div *ngIf="f.mobile.errors.required">Mobile is required</div>
-            </div>
+              #mobileInput
+              (keydown.enter)="addressInput.focus()"
+            />
           </div>
           <div class="form-group">
             <label>Address</label>
             <input type="text" formControlName="address" class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.address.errors }" />
-            <div *ngIf="submitted && f.address.errors" class="invalid-feedback">
-              <div *ngIf="f.address.errors.required">Address is required</div>
-            </div>
+              #addressInput
+              (keydown.enter)="submit()"
+            />
           </div>
           <div class="form-group">
-            <button class="btn btn-primary">Save</button>
+            <button #submitButton class="btn btn-primary" (click)="submit()">Save</button>
             &nbsp;
             <a (click)="closeModal('create-modal')" class="btn btn-warning btn-xs">
               Close
@@ -161,3 +159,4 @@
     </div>
   </div>
 </jw-modal>
+
