--- a/src/app/home/master-report/master-inventory-report/master-inventory-report.component.html
+++ b/src/app/home/master-report/master-inventory-report/master-inventory-report.component.html
@@ -98,6 +98,13 @@
                       <td>{{ item.tp }}</td>
                       <td>{{ item.mrp }}</td>
                   </tr>
+                  <tr>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                    <td><span style="font-weight: bold;"> {{ summary.total_medicine }}</span></td>
+                    <td><span style="font-weight: bold;"> {{ summary.quantity_in_total }}</span></td>
+                    <td><span style="font-weight: bold;"> {{ summary.quantity_out_total }}</span></td>
+                  </tr>
               </tbody>
           </table>
         </div>
