--- a/src/app/home/master-report/master-inventory-report/master-inventory-report.component.html
+++ b/src/app/home/master-report/master-inventory-report/master-inventory-report.component.html
@@ -34,6 +34,9 @@
               </button> &nbsp;
               <button type="button" (click)="resetList()" class="btn btn-warning">
                 Reset
+              </button> &nbsp;
+              <button type="button" (click)="exportStockReport()" class="btn btn-success">
+                <i class="fa fa-download"></i> Download Excel
               </button>
             </form>
         </div>
@@ -59,7 +62,7 @@
         </div>
         <div class="col-lg-12">
             <div class="custom_loader_new" style="margin: 0 auto !important;" *ngIf="customLoader"></div>
-            <table class="mb-0 table table-bordered" *ngIf="!customLoader" style="font-size: 12px;">
+              <table id="stock-table" class="mb-0 table table-bordered" *ngIf="!customLoader" style="font-size: 12px;">
                 <thead>
                   <tr>
                       <th>#</th>
