--- a/src/app/home/sale/sale.component.html
+++ b/src/app/home/sale/sale.component.html
@@ -413,7 +413,7 @@
           <div style="flex: 1;"></div>
           <div id="pharmacy-info">
             <div>{{ orderDetails.created_by }}</div>
-            <div>{{ orderDetails.pharmacy_address }}</div>
+            <div>{{ orderDetails.branch_name }}, {{ orderDetails.branch_city }}</div>
             <div>{{ orderDetails.branch_mobile }}</div>
           </div>
         </div>
