--- a/src/app/home/sale/sale-list/sale-list.component.html
+++ b/src/app/home/sale/sale-list/sale-list.component.html
@@ -591,7 +591,7 @@
           </div>
         </div>
       </header>
-      <main style="margin-bottom: 5%">
+      <main style="margin-bottom: 1px">
         <table class="preview">
           <thead>
             <tr>
