--- a/src/app/home/sale/sale.component.html
+++ b/src/app/home/sale/sale.component.html
@@ -418,7 +418,7 @@
           </div>
         </div>
       </header>
-      <main style="margin-bottom: 5%">
+      <main style="margin-bottom: 1px">
         <table class="preview">
           <thead>
             <tr>
@@ -545,7 +545,7 @@
       </main>
     </div>
   </div>
-  <div id="print-div">
+  <div id="print-div" class="print-div">
     <button id="print-button" (click)="printInvoice('print-modal')" class="btn btn-success btn-xs">
       Print
     </button>
