--- a/src/app/home/includes/header/header.component.html
+++ b/src/app/home/includes/header/header.component.html
@@ -60,6 +60,9 @@
                 <a routerLink="/sale/list" class="nav-link"><i class="fa fa-caret-right"></i> Sale List </a>
               </li>
               <li class="nav-item">
+                <a routerLink="/sale-reports" class="nav-link"><i class="fa fa-caret-right"></i> Sale Days Report </a>
+              </li>
+              <li class="nav-item">
                 <a routerLink="/sale-due" class="nav-link"><i class="fa fa-caret-right"></i> Sale Due </a>
               </li>
             </ul>
