--- a/src/app/home/sale/sale-list/sale-list.component.html
+++ b/src/app/home/sale/sale-list/sale-list.component.html
@@ -471,7 +471,7 @@
         </div>
         <form *ngIf="saleItem" class="form-inline" id="myForm" (ngSubmit)="submitReturn()">
           <div class="form-group mx-sm-3 mb-2">
-            <input value="{{ saleItem.company }}" readonly type="text" class="form-control" />
+            <input value="{{ saleItem.brand }}" readonly type="text" class="form-control" />
           </div>
           <div class="form-group mx-sm-3 mb-2">
             <input value="{{ saleItem.medicine }}" readonly type="text" class="form-control" />
