Sale Days Report  pdf

--- a/src/app/home/sale-reports/sale-reports.component.html
+++ b/src/app/home/sale-reports/sale-reports.component.html
@@ -20,6 +20,9 @@
               <button type="button" (click)="exportSaleReport()" class="ml-2 btn btn-success">
                 <i class="fa fa-download"></i> Download Excel
               </button>
+              <button type="button" (click)="exportSaleReportPDF()" class="ml-2 btn btn-danger">
+                <i class="fa fa-file-pdf"></i> Download PDF
+              </button>
           </div>
         </div>
         <div class="custom_loader_new" style="margin: 0 auto !important;" *ngIf="customLoader"></div>
