--- a/src/app/home/master-report/master-inventory-report/master-inventory-report.component.html
+++ b/src/app/home/master-report/master-inventory-report/master-inventory-report.component.html
@@ -38,6 +38,9 @@
               <button type="button" (click)="exportStockReport()" class="btn btn-success">
                 <i class="fa fa-download"></i> Download Excel
               </button>
+              <button type="button" (click)="exportStockReportPDF()" class="btn btn-danger">
+                <i class="fa fa-file-pdf"></i> Download PDF
+              </button>
             </form>
         </div>
         <div class="col-lg-12">
