--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -54,10 +54,10 @@
           <a href="javascript:void(0)">
             <div class="text-white opacity-8 mt-3 footer-link">
               <span class="footer-div">
-                AnalyticalJ
+                <a href="https://analyticalj.com/analyticalj/public/" target="_blank" class="nav-link"><span style="color: white;">AnalyticalJ</span></a>
               </span>
               <span class="footer-div version-text">
-                Version: 3.0.5
+                Version: 1.0
               </span>
             </div>
           </a>
