--- a/src/app/home/includes/footer/footer.component.html
+++ b/src/app/home/includes/footer/footer.component.html
@@ -3,22 +3,16 @@
          <div class="app-footer__inner">
             <div class="app-footer-left">
                <ul class="nav">
-                     <li class="nav-item">
-                        <a href="#" class="nav-link"> Copyright © 2019. All rights reserved </a>
-                     </li>
-                     <li class="nav-item">
-                        <a href="#" class="nav-link"> | </a>
-                     </li>
-                     <li class="nav-item">
-                        <a href="#" class="nav-link"> Version: 3.0.5 </a>
-                     </li>
+                  <li class="nav-item">
+                     Copyright <a href="https://analyticalj.com/analyticalj/public/" target="_blank"> ©analyticalj</a> 2025. All rights reserved
+                  </li>
                </ul>
             </div>
             <div class="app-footer-right">
                <ul class="nav">
-                     <li class="nav-item">
-                        <a href="#" class="nav-link"> AnalyticalJ </a>
-                     </li>
+                  <li class="nav-item">
+                     <a href="https://analyticalj.com/analyticalj/public/" class="nav-link"> Version: 1.0 </a>
+                  </li>
                </ul>
             </div>
          </div>
