--- a/src/app/home/includes/header/header.component.html
+++ b/src/app/home/includes/header/header.component.html
@@ -63,6 +63,9 @@
                 <a routerLink="/sale-reports" class="nav-link"><i class="fa fa-caret-right"></i> Sale Days Report </a>
               </li>
               <li class="nav-item">
+                <a routerLink="/master-report/sale-report-supplier" class="nav-link"><i class="fa fa-caret-right"></i> Supplier Report </a>
+              </li>
+              <li class="nav-item">
                 <a routerLink="/sale-due" class="nav-link"><i class="fa fa-caret-right"></i> Sale Due </a>
               </li>
             </ul>
