--- a/src/app/home/sale/sale.component.html
+++ b/src/app/home/sale/sale.component.html
@@ -58,6 +58,11 @@
                             </div>
                             <button style="display: none" type="submit" class="btn btn-primary mb-0 add-medicine-btn">Add</button>
                         </div>
+                        <div class="col-md-3"></div>
+
+                        <div class="col-md-1 mt-1 text-right total-quantity">
+                          <h2><strong>{{ productList?.total_quantity }}</strong></h2>
+                        </div>
                     </div>
                 </form>
                 <div class="table-responsive">
@@ -72,7 +77,7 @@
                             QTY(Pcs)
                         </th>
                         <th style="width: 20%" class="text-center qty-width">
-                            Free QTY(Pcs)
+                            Free(QTY)
                         </th>
                         <th style="width: 10%" class="text-center">Amount(Tk.)</th>
                         <th style="width: 15%" class="text-center"></th>
