--- a/src/app/home/purchase/purchase.component.css
+++ b/src/app/home/purchase/purchase.component.css
@@ -128,3 +128,10 @@ label {
 .checkbox-label-purchase{
   padding-left: 16px !important;
 }
+
+.reset-po {
+  background-color: #794c8a;
+  color: white;
+  border-radius: 8px;
+  margin: 25%;
+}
