--- a/src/app/home/purchase/purchase.component.html
+++ b/src/app/home/purchase/purchase.component.html
@@ -82,6 +82,12 @@
                   <button type="submit" style="display: none;" class="btn btn-primary mb-0 add-medicine-btn">
                     Add
                   </button>
+
+                  <div class="col-md-4"></div>
+
+                  <div>
+                    <button type="button" class="btn btn-primary reset-po" (click)="confirmReset()">Reset</button>
+                  </div>
               </div>
               <!-- <div class="row">
                 <div class="col-md-2 position-relative form-check">
